<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">X Hub</string>
    <string name="header_title">Anshuman X</string>
    <string name="cd_info">About X Hub</string>
    <string name="cd_refresh">Refresh</string>
    <string name="nav_home">Home</string>
    <string name="nav_changelog">Changelog</string>
    <string name="nav_links">Links</string>

    <string name="hero_official">Official build</string>
    <string name="hero_unofficial">Unofficial build</string>
    <string name="hero_personal">Personal build</string>
    <string name="hero_sub_official">Fully supported, regular updates</string>
    <string name="hero_sub_unofficial">Use at your own risk</string>
    <string name="hero_sub_personal">Not for public distribution</string>

    <string name="who_official">Maintained by</string>
    <string name="who_unofficial">Report bugs on</string>
    <string name="who_unofficial_v">Telegram or GitHub</string>
    <string name="who_personal">Built for</string>
    <string name="who_private">Private build</string>

    <string name="section_about_rom">About the ROM</string>
    <string name="section_build">This build</string>
    <string name="section_changelog">Changelog</string>
    <string name="section_about_me">About me</string>
    <string name="section_links">Find me</string>

    <string name="tile_device">Device</string>
    <string name="tile_android">Android</string>
    <string name="tile_date">Build date</string>
    <string name="tile_patch">Security patch</string>
    <string name="tile_id">Build ID</string>
    <string name="tile_eta">Next update</string>

    <string name="soon">will be updated soon</string>
    <string name="soon_about">Details will be updated soon.</string>
    <string name="soon_changelog">Changelog will be updated soon.</string>
    <string name="synced">Synced %1$s</string>
    <string name="syncing">Syncing</string>
    <string name="offline">Offline data</string>
    <string name="update_available">Update available: %1$s</string>
    <string name="no_link">Link not set yet</string>
    <string name="copyright">© 2026 Anshuman X (maxxcodebug). All rights reserved.</string>
    <string name="about_body">X Hub shows who maintains this ROM, what build you are on and where to get help. Most of it updates automatically.</string>
</resources>
